--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "serve:prod": "webpack serve --open --env rm1=prod",
     "explore": "source-map-explorer dist/*.js --no-border-checks",
     "express": "node ExpressServer/server.js",
+    "seperator": "",
     "build:dockerimage": "docker build -t image1:1.0 --build-arg PORT=10000 .",
-    "startcontainer": "docker run -dp 10000:10000 -v rmnv1:/app/data --name cont1 image1:1.0"
+    "startcontainer": "docker run -dp 10000:10000 -v rmnv1:/app/data --name cont1 image1:1.0",
+    "nametheimage": "docker image tag image1:1.0 rahulmisra2000/image1:1.0",
+    "pushtohub": "npm run nametheimage && docker push rahulmisra2000/image1:1.0"
   },
   "//": "['These are just comments', I think webpack builds the project and webpack serve builds and then starts the webpack dev server'  ]",
   "devDependencies": {
